# insurance-helper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scrape.yml
data/: state.json
data/metadata/: health_insurance_products.csv  life_insurance_products.csv  life_products_list.csv  nonlife_insurance_products.csv
scripts/: delta_download.py
src/irdai_scraper/: __init__.py  __main__.py  cli.py  config.py  models.py
src/irdai_scraper/downloader/: __init__.py  async_downloader.py  file_manager.py
src/irdai_scraper/scraper/: __init__.py  base.py  health.py  life.py  life_list.py  nonlife.py  parser.py
src/irdai_scraper/storage/: __init__.py  csv_writer.py  r2_uploader.py  state.py
