[project]
name = "irdai-scraper"
version = "0.1.0"
description = "IRDAI Insurance Products Web Scraper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "aiolimiter>=1.1.0",
]

[project.scripts]
irdai-scraper = "irdai_scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/irdai_scraper"]

[tool.hatch.build.targets.wheel]
packages = ["src/irdai_scraper"]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
